--- a/html/ayaka.html
+++ b/html/ayaka.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,8 +182,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Daughter of the Yashiro Commission's Kamisato Clan from Inazuma. Dignified and elegant, wise and determined.<br>
-                    Sincere and pleasant to others. Universally loved by the Inazuma people, she has earned the title of Shirasagi Himegimi.</div>
+                <div class="lore">Daughter of the Yashiro Commission's Kamisato Clan from Inazuma. Dignified and
+                    elegant, wise and determined.<br>
+                    Sincere and pleasant to others. Universally loved by the Inazuma people, she has earned the title of
+                    Shirasagi Himegimi.
+                </div>
 
                 <div class="weaponsContent">
                     <div>
@@ -342,7 +346,8 @@
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kamisato_ayaka/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kamisato_ayaka/talent_1.png">
                             <span class="talentsName">Kamisato Art: Kabuki</span>
                             <span>Normal Attack</span>
                             <div>
@@ -361,7 +366,8 @@
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kamisato_ayaka/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kamisato_ayaka/talent_2.png">
                             <span class="talentsName">Kamisato Art: Hyouka</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -375,7 +381,8 @@
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kamisato_ayaka/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kamisato_ayaka/talent_3.png">
                             <span class="talentsName">Kamisato Art: Soumetsu</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -392,7 +399,8 @@
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kamisato_ayaka/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kamisato_ayaka/talent_4.png">
                             <span class="talentsName">Amatsumi Kunitsumi Sanctification</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -400,7 +408,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kamisato_ayaka/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kamisato_ayaka/talent_5.png">
                             <span class="talentsName">Kanten Senmyou Blessing</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -477,7 +486,7 @@ Maximum upgrade level is 15.
                             <span class="constellationsName">Ebb and Flow</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span class="constellationsDescription">Opponents damaged by Kamisato Art: Soumetsu's Frostflake Seki no To will have their DEF decreased by 30% for 6s.</span>
+                                <span class="constellationsDescription">Opponents damaged by Kamisato Art: Soumetsu's Frostflake Seki no To will have their DEF decreased by 30% for 6s.</span>
                             </div>
                         </div>
                     </div>
@@ -524,7 +533,12 @@ Kamisato Ayaka gains Usurahi Butou every 10s, increasing her Charged Attack DMG 
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5RCsr1Y8UZA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/5RCsr1Y8UZA"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -540,7 +554,7 @@ Kamisato Ayaka gains Usurahi Butou every 10s, increasing her Charged Attack DMG 
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
