--- a/html/itto.html
+++ b/html/itto.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,7 +182,8 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Fast as the wind and mighty as thunder, he is an intrepid man with Oni blood running through his veins.
+                <div class="lore">Fast as the wind and mighty as thunder, he is an intrepid man with Oni blood running
+                    through his veins.
                 </div>
 
                 <div class="weaponsContent">
@@ -331,7 +333,8 @@
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/arataki_itto/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/arataki_itto/talent_1.png">
                             <span class="talentsName">Fight Club Legend</span>
                             <span>Normal Attack</span>
                             <div>
@@ -354,7 +357,8 @@ If no stacks of Superlative Superstrength are available, Itto will perform a sin
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/arataki_itto/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/arataki_itto/talent_2.png">
                             <span class="talentsName">Masatsu Zetsugi: Akaushi Burst!</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -376,7 +380,8 @@ Ushi is considered a Geo Construct. Arataki Itto can only deploy 1 Ushi on the f
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/arataki_itto/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/arataki_itto/talent_3.png">
                             <span class="talentsName">Royal Descent: Behold, Itto the Evil!</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -396,7 +401,8 @@ This state has the following special properties:</span>
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/arataki_itto/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/arataki_itto/talent_4.png">
                             <span class="talentsName">Arataki Ichiban</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -407,7 +413,8 @@ This state has the following special properties:</span>
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/arataki_itto/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/arataki_itto/talent_5.png">
                             <span class="talentsName">Bloodline of the Crimson Oni</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -415,7 +422,8 @@ This state has the following special properties:</span>
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/arataki_itto/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/arataki_itto/talent_6.png">
                             <span class="talentsName">Woodchuck Chucked</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -527,7 +535,11 @@ Arataki Itto's Charged Attacks deal +70% Crit DMG. Additionally, when he uses Ar
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iXeJ94AFZDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/iXeJ94AFZDw"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -544,7 +556,7 @@ Arataki Itto's Charged Attacks deal +70% Crit DMG. Additionally, when he uses Ar
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
