--- a/html/jean.html
+++ b/html/jean.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,8 +182,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">As the Acting Grand Master of the Knights, Jean has always been devoted to her duties and maintaining peace in Mondstadt.<br>
-                    She had taken precautions long before the onset of Stormterror's assault, and she will guard Mondstadt with her life as always.</div>
+                <div class="lore">As the Acting Grand Master of the Knights, Jean has always been devoted to her duties
+                    and maintaining peace in Mondstadt.<br>
+                    She had taken precautions long before the onset of Stormterror's assault, and she will guard
+                    Mondstadt with her life as always.
+                </div>
 
                 <div class="weaponsContent">
                     <div>
@@ -267,7 +271,8 @@
                             <span class="materialsName">Hurricane Seed (x46)</span>
                         </div>
                         <div>
-                            <img alt="Dandelion Seed" class="material rare1" src="../images/img-genshin/items/dandelion_seed.png">
+                            <img alt="Dandelion Seed" class="material rare1"
+                                 src="../images/img-genshin/items/dandelion_seed.png">
                             <span class="materialsName">Dandelion Seed (x168)</span>
                         </div>
                         <div>
@@ -299,7 +304,8 @@
                         </div>
                         <div>
                             <img alt="Philosophies of Resistance"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_resistance.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_resistance.png">
                             <span class="materialsName">Philosophies of Resistance (x114)</span>
                         </div>
                         <div>
@@ -492,8 +498,7 @@ Maximum upgrade level is 15.
                             <div>
                                     <span class="constellationsDescription">
                                         Increase the Level of Gale Blade by 3.
-Maximum upgrade level is 15.
-                                    </span>
+Maximum upgrade level is 15.</span>
                             </div>
                         </div>
                     </div>
@@ -505,8 +510,7 @@ Maximum upgrade level is 15.
                             <span>Constellation 6</span>
                             <div>
                                     <span class="constellationsDescription">
-                                        Incoming DMG is decreased by 35% within the Field created by Dandelion Breeze. Upon leaving the Dandelion Field, this effect lasts for 3 attacks or 10s.
-                                    </span>
+                                        Incoming DMG is decreased by 35% within the Field created by Dandelion Breeze. Upon leaving the Dandelion Field, this effect lasts for 3 attacks or 10s.</span>
                             </div>
                         </div>
                     </div>
@@ -528,7 +532,12 @@ Maximum upgrade level is 15.
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/_FOkixTeAaA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/_FOkixTeAaA"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -544,7 +553,7 @@ Maximum upgrade level is 15.
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
