--- a/html/kazuha.html
+++ b/html/kazuha.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -182,7 +183,8 @@
         <div id="content">
             <div id="text">
                 <div class="lore">A wandering samurai from Inazuma with a modest and gentle personality.<br>
-                    Beneath a youthful and carefree demeanor lies a heart that hides a great many burdens from the past. Seemingly easygoing, Kazuha has his own code of conduct.
+                    Beneath a youthful and carefree demeanor lies a heart that hides a great many burdens from the past.
+                    Seemingly easygoing, Kazuha has his own code of conduct.
                 </div>
 
                 <div class="weaponsContent">
@@ -261,7 +263,8 @@ When you possess 2 Sigils of Rebellion, all of them will be consumed and all nea
                             <span class="materialsName">Juvenile Jade (x46)</span>
                         </div>
                         <div>
-                            <img alt="Sea Ganoderma" class="material rare1" src="../images/img-genshin/items/sea_ganoderma.png">
+                            <img alt="Sea Ganoderma" class="material rare1"
+                                 src="../images/img-genshin/items/sea_ganoderma.png">
                             <span class="materialsName">Sea Ganoderma (x168)</span>
                         </div>
                         <div>
@@ -333,7 +336,8 @@ When you possess 2 Sigils of Rebellion, all of them will be consumed and all nea
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kaedehara_kazuha/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kaedehara_kazuha/talent_1.png">
                             <span class="talentsName">Garyuu Bladework</span>
                             <span>Normal Attack</span>
                             <div>
@@ -352,7 +356,8 @@ When you possess 2 Sigils of Rebellion, all of them will be consumed and all nea
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kaedehara_kazuha/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kaedehara_kazuha/talent_2.png">
                             <span class="talentsName">Chihayaburu</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -373,7 +378,8 @@ When a Plunging Attack is performed using the effects of the Elemental Skill Chi
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kaedehara_kazuha/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kaedehara_kazuha/talent_3.png">
                             <span class="talentsName">Kazuha Slash</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -389,7 +395,8 @@ When a Plunging Attack is performed using the effects of the Elemental Skill Chi
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kaedehara_kazuha/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kaedehara_kazuha/talent_4.png">
                             <span class="talentsName">Soumon Swordsmanship</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -397,7 +404,8 @@ When a Plunging Attack is performed using the effects of the Elemental Skill Chi
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kaedehara_kazuha/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kaedehara_kazuha/talent_5.png">
                             <span class="talentsName">Poetics of Fuubutsu</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -405,7 +413,8 @@ When a Plunging Attack is performed using the effects of the Elemental Skill Chi
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kaedehara_kazuha/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kaedehara_kazuha/talent_6.png">
                             <span class="talentsName">Cloud Strider</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -504,7 +513,7 @@ Maximum upgrade level is 15.
                             <span class="constellationsName">Crimson Momiji</span>
                             <span>Constellation 6</span>
                             <div>
-                                    <span class="constellationsDescription">After using Chihayaburu or Kazuha Slash, Kaedehara Kazuha gains an Anemo Infusion for 5s. Additionally, each point of Elemental Mastery will increase the DMG dealt by Kaedehara Kazuha's Normal, Charged, and Plunging Attack by 0.2%.</span>
+                                <span class="constellationsDescription">After using Chihayaburu or Kazuha Slash, Kaedehara Kazuha gains an Anemo Infusion for 5s. Additionally, each point of Elemental Mastery will increase the DMG dealt by Kaedehara Kazuha's Normal, Charged, and Plunging Attack by 0.2%.</span>
                             </div>
                         </div>
                     </div>
@@ -526,7 +535,12 @@ Maximum upgrade level is 15.
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zif0Lmhrivc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/zif0Lmhrivc"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -542,7 +556,7 @@ Maximum upgrade level is 15.
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
