--- a/html/keqing.html
+++ b/html/keqing.html
@@ -12,6 +12,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -180,8 +181,13 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">The Yuheng of the Liyue Qixing. Keqing has much to say about Rex Lapis' unilateral approach to policymaking in Liyue ⁠— but in truth, gods admire skeptics such as her quite a lot.<br>
-                    She firmly believes that humanity's future should be determined by humans themselves, and that they can even do better than the archons and adepti have done for them. In order to prove this, she works harder than anyone else.</div><br>
+                <div class="lore">The Yuheng of the Liyue Qixing. Keqing has much to say about Rex Lapis' unilateral
+                    approach to policymaking in Liyue ⁠— but in truth, gods admire skeptics such as her quite a lot.<br>
+                    She firmly believes that humanity's future should be determined by humans themselves, and that they
+                    can even do better than the archons and adepti have done for them. In order to prove this, she works
+                    harder than anyone else.
+                </div>
+                <br>
                 <div class="weaponsContent">
                     <div>
                         <img alt="Mistsplitter Reforged" class="weapon rare5"
@@ -314,7 +320,8 @@ Additionally, regenerates <strong>60/70/80/90/100%</strong> of ATK as HP when No
                         </div>
                         <div>
                             <img alt="Philosophies of Prosperity"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_prosperity.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_prosperity.png">
                             <span class="materialsName">Philosophies of Prosperity (x114)</span>
                         </div>
                         <div>
@@ -451,7 +458,7 @@ When the Stiletto hits its target, it deals Electro DMG to enemies in a small Ao
                             <span class="constellationsName">Thundering Might</span>
                             <span>Constellation 1</span>
                             <div>
-                                    <span class="constellationsDescription">Recasting Stellar Restoration while a Lightning Stiletto is present causes Keqing to deal 50% of her ATK as AoE Electro DMG at the start point and terminus of her Blink.</span>
+                                <span class="constellationsDescription">Recasting Stellar Restoration while a Lightning Stiletto is present causes Keqing to deal 50% of her ATK as AoE Electro DMG at the start point and terminus of her Blink.</span>
                             </div>
                         </div>
                     </div>
@@ -462,7 +469,7 @@ When the Stiletto hits its target, it deals Electro DMG to enemies in a small Ao
                             <span class="constellationsName">Keen Extraction</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span class="constellationsDescription">When Keqing's Normal and Charged Attack's hit enemies affected by Electro, they have a 50% chance of producing an Elemental Particle. This effect can only occur once every 5s.</span>
+                                <span class="constellationsDescription">When Keqing's Normal and Charged Attack's hit enemies affected by Electro, they have a 50% chance of producing an Elemental Particle. This effect can only occur once every 5s.</span>
                             </div>
                         </div>
                     </div>
@@ -510,7 +517,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Tenacious Star</span>
                             <span>Constellation 6</span>
                             <div>
-                                    <span class="constellationsDescription">When initiating a Normal Attack, Charged Attack, Elemental Skill or Elemental Burst, Keqing gains a 6% Electro DMG Bonus for 8s. Effects triggered by Normal Attacks, Charged Attacks, Elemental Skills and Elemental Bursts are considered independent entities.</span>
+                                <span class="constellationsDescription">When initiating a Normal Attack, Charged Attack, Elemental Skill or Elemental Burst, Keqing gains a 6% Electro DMG Bonus for 8s. Effects triggered by Normal Attacks, Charged Attacks, Elemental Skills and Elemental Bursts are considered independent entities.</span>
                             </div>
                         </div>
                     </div>
@@ -532,7 +539,11 @@ Maximum upgrade level is 15.</span>
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rPLh5QAedUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/rPLh5QAedUE"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -549,7 +560,7 @@ Maximum upgrade level is 15.</span>
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
