--- a/html/klee.html
+++ b/html/klee.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -457,7 +458,7 @@ Attacks and Skills have a certain chance to summon a spark that bombards enemies
                             <span class="constellationsName">Explosive Frags</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span class="constellationsDescription">Being hit by Jumpy Dumpty's mines decreases enemy DEF by 23% for 10s.</span>
+                                <span class="constellationsDescription">Being hit by Jumpy Dumpty's mines decreases enemy DEF by 23% for 10s.</span>
                             </div>
                         </div>
                     </div>
@@ -528,7 +529,11 @@ When Sparks 'n' Splash is used, all party members will gain 10% Pyro DMG Bonus f
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/C_duDk5e8yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/C_duDk5e8yU"
+                        title="YouTube video player" width="560"></iframe>
 
             </div>
         </div>
@@ -546,7 +551,7 @@ When Sparks 'n' Splash is used, all party members will gain 10% Pyro DMG Bonus f
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
