--- a/html/kokomi.html
+++ b/html/kokomi.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,8 +182,10 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Kokomi is the Divine Priestess of Watatsumi Island, and also serves as its supreme leader.<br>
-                    She is well-versed in the art of war, is good at strategizing, and has keen insights into military affairs. She is also adept at handling domestic affairs, diplomacy, and other matters.<br>
+                <div class="lore">Kokomi is the Divine Priestess of Watatsumi Island, and also serves as its supreme
+                    leader.<br>
+                    She is well-versed in the art of war, is good at strategizing, and has keen insights into military
+                    affairs. She is also adept at handling domestic affairs, diplomacy, and other matters.<br>
                     Still, this unfathomable leader has a mysterious side to her...
                 </div>
 
@@ -305,7 +308,8 @@
                         </div>
                         <div>
                             <img alt="Philosophies of Transience"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_transience.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_transience.png">
                             <span class="materialsName">Philosophies of Transience (x114)</span>
                         </div>
                         <div>
@@ -345,7 +349,8 @@
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/sangonomiya_kokomi/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/sangonomiya_kokomi/talent_1.png">
                             <span class="talentsName">The Shape of Water</span>
                             <span>Normal Attack</span>
                             <div>
@@ -364,7 +369,8 @@
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/sangonomiya_kokomi/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/sangonomiya_kokomi/talent_2.png">
                             <span class="talentsName">Kurage's Oath</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -380,7 +386,8 @@
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/sangonomiya_kokomi/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/sangonomiya_kokomi/talent_3.png">
                             <span class="talentsName">Nereid's Ascension</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -398,7 +405,8 @@
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/sangonomiya_kokomi/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/sangonomiya_kokomi/talent_4.png">
                             <span class="talentsName">Tamanooya's casket</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -406,7 +414,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/sangonomiya_kokomi/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/sangonomiya_kokomi/talent_5.png">
                             <span class="talentsName">Song of Pearls</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -414,7 +423,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/sangonomiya_kokomi/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/sangonomiya_kokomi/talent_6.png">
                             <span class="talentsName">Princess of Watatsumi</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -455,9 +465,9 @@ This DMG is not considered Normal Attack DMG.
                             <span class="constellationsName">The Clouds Like Waves Rippling</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span class="constellationsDescription">Sangonomiya Kokomi gains the following Healing Bonuses with regard to characters with 50% or less HP via the following methods:</span>
-                                    <span class="constellationsDescription">Kurage's Oath Bake-Kurage: 4.5% of Kokomi's Max HP.</span>
-                                    <span class="constellationsDescription">Nereid's Ascension Normal and Charged Attacks: 0.6% of Kokomi's Max HP.</span>
+                                <span class="constellationsDescription">Sangonomiya Kokomi gains the following Healing Bonuses with regard to characters with 50% or less HP via the following methods:</span>
+                                <span class="constellationsDescription">Kurage's Oath Bake-Kurage: 4.5% of Kokomi's Max HP.</span>
+                                <span class="constellationsDescription">Nereid's Ascension Normal and Charged Attacks: 0.6% of Kokomi's Max HP.</span>
                             </div>
                         </div>
                     </div>
@@ -506,7 +516,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Sango Isshin</span>
                             <span>Constellation 6</span>
                             <div>
-                                    <span class="constellationsDescription">While donning the Ceremonial Garment created by Nereid's Ascension, Sangonomiya Kokomi gains a 40% Hydro DMG Bonus for 4s after her Normal and Charged Attacks heal a character with 80% or more HP.</span>
+                                <span class="constellationsDescription">While donning the Ceremonial Garment created by Nereid's Ascension, Sangonomiya Kokomi gains a 40% Hydro DMG Bonus for 4s after her Normal and Charged Attacks heal a character with 80% or more HP.</span>
                             </div>
                         </div>
                     </div>
@@ -528,7 +538,11 @@ Maximum upgrade level is 15.</span>
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fVf0RB3nvOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/fVf0RB3nvOU"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -545,7 +559,7 @@ Maximum upgrade level is 15.</span>
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
