--- a/html/lisa.html
+++ b/html/lisa.html
@@ -12,6 +12,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -180,8 +181,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">She is an intellectual witch who can never get enough naps. As the Librarian of the Knights of Favonius, Lisa is smart in that she always knows exactly what to do with whatever troubles her.<br>
-                    As much as she loves her sleep, she still manages to keep everything under control in a calm, composed manner.
+                <div class="lore">She is an intellectual witch who can never get enough naps. As the Librarian of the
+                    Knights of Favonius, Lisa is smart in that she always knows exactly what to do with whatever
+                    troubles her.<br>
+                    As much as she loves her sleep, she still manages to keep everything under control in a calm,
+                    composed manner.
                 </div>
 
                 <div class="weaponsContent">
@@ -534,7 +538,11 @@ This effect can only occur once every 5s.
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DCqtuh_cuLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/DCqtuh_cuLU"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -551,7 +559,7 @@ This effect can only occur once every 5s.
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
