--- a/html/news.html
+++ b/html/news.html
@@ -11,6 +11,7 @@
     <link href="../style/main.css" rel="stylesheet" type="text/css">
     <link href="../style/news.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/news.js"></script>
 
@@ -258,7 +259,7 @@
         <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                     src="../images/icons/hoyolab.png"
                                                                     title="Hoyolab"></a>
-        <div class="underline_footer">
+        <div class="underlineFooter">
         </div>
     </div>
     <div class="bot">
