--- a/html/ningguang.html
+++ b/html/ningguang.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,8 +182,10 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Owner of the Jade Chamber in the skies above Liyue, there are stories abound about Ningguang, with her elegance and mysterious smile.<br>
-                    As a Tianquan of the Liyue Qixing, not only does she embody law and order, she also represents fortune and wit.
+                <div class="lore">Owner of the Jade Chamber in the skies above Liyue, there are stories abound about
+                    Ningguang, with her elegance and mysterious smile.<br>
+                    As a Tianquan of the Liyue Qixing, not only does she embody law and order, she also represents
+                    fortune and wit.
                 </div>
 
                 <div class="weaponsContent">
@@ -291,7 +294,8 @@ Interlude: Elemental Mastery is increased by <strong>240/300/360/420/480</strong
                             <span class="materialsName">Basalt Pillar (x46)</span>
                         </div>
                         <div>
-                            <img alt="Glaze Lily" class="material rare1" src="../images/img-genshin/items/glaze_lily.png">
+                            <img alt="Glaze Lily" class="material rare1"
+                                 src="../images/img-genshin/items/glaze_lily.png">
                             <span class="materialsName">Glaze Lily (x168)</span>
                         </div>
                         <div>
@@ -323,7 +327,8 @@ Interlude: Elemental Mastery is increased by <strong>240/300/360/420/480</strong
                         </div>
                         <div>
                             <img alt="Philosophies of Prosperity"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_prosperity.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_prosperity.png">
                             <span class="materialsName">Philosophies of Prosperity (x114)</span>
                         </div>
                         <div>
@@ -363,7 +368,8 @@ Interlude: Elemental Mastery is increased by <strong>240/300/360/420/480</strong
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/ningguang/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/ningguang/talent_1.png">
                             <span class="talentsName">Sparkling Scatter</span>
                             <span>Normal Attack</span>
                             <div>
@@ -383,7 +389,8 @@ If Ningguang has any Star Jades, unleashing a Charged Attack will cause the Star
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/ningguang/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/ningguang/talent_2.png">
                             <span class="talentsName">Jade Screen</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -401,7 +408,8 @@ If Ningguang has any Star Jades, unleashing a Charged Attack will cause the Star
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/ningguang/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/ningguang/talent_3.png">
                             <span class="talentsName">Starshatter</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -416,7 +424,8 @@ If Ningguang has any Star Jades, unleashing a Charged Attack will cause the Star
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/ningguang/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/ningguang/talent_4.png">
                             <span class="talentsName">Backup Plan</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -424,7 +433,8 @@ If Ningguang has any Star Jades, unleashing a Charged Attack will cause the Star
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/ningguang/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/ningguang/talent_5.png">
                             <span class="talentsName">Strategic Reserve</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -432,7 +442,8 @@ If Ningguang has any Star Jades, unleashing a Charged Attack will cause the Star
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/ningguang/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/ningguang/talent_6.png">
                             <span class="talentsName">Trove of Marvelous Treasures</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -546,7 +557,11 @@ When Starshatter is used, Ningguang gains 7 Star Jades.
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/TOhqmmhWjv4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/TOhqmmhWjv4"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -563,7 +578,7 @@ When Starshatter is used, Ningguang gains 7 Star Jades.
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
