--- a/html/noelle.html
+++ b/html/noelle.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,9 +182,13 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Like most of Mondstadt's young people, Noelle always dreamed of being a knight of Favonius when she grew up.<br>
-                    She may not have what it takes to be a knight just yet, but she is learning. Working as a maid at the Knights' headquarters, she is constantly taking notes on what constitutes knightly speech, knightly conduct, and knightly customs.<br>
-                    She holds firm to her belief that one day she will join their ranks — she just needs to keep trying her hardest at everything she does.
+                <div class="lore">Like most of Mondstadt's young people, Noelle always dreamed of being a knight of
+                    Favonius when she grew up.<br>
+                    She may not have what it takes to be a knight just yet, but she is learning. Working as a maid at
+                    the Knights' headquarters, she is constantly taking notes on what constitutes knightly speech,
+                    knightly conduct, and knightly customs.<br>
+                    She holds firm to her belief that one day she will join their ranks — she just needs to keep trying
+                    her hardest at everything she does.
                 </div>
 
                 <div class="weaponsContent">
@@ -303,7 +308,8 @@
                         </div>
                         <div>
                             <img alt="Philosophies of Resistance"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_resistance.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_resistance.png">
                             <span class="materialsName">Philosophies of Resistance (x114)</span>
                         </div>
                         <div>
@@ -456,7 +462,7 @@ While Sweeping Time and Breastplate are both in effect, the chance of Breastplat
                             <span class="constellationsName">Combat Maid</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span class="constellationsDescription">Decreases the Stamina Consumption of Noelle's Charged Attacks by 20% and increases her Charged Attack DMG by 15%.</span>
+                                <span class="constellationsDescription">Decreases the Stamina Consumption of Noelle's Charged Attacks by 20% and increases her Charged Attack DMG by 15%.</span>
                             </div>
                         </div>
                     </div>
@@ -529,7 +535,11 @@ Additionally, every enemy defeated during the skill's duration adds 1s to the du
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4umz-S37piU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/4umz-S37piU"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -546,7 +556,7 @@ Additionally, every enemy defeated during the skill's duration adds 1s to the du
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
