--- a/html/qiqi.html
+++ b/html/qiqi.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,14 +182,17 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">An apprentice and herb gatherer at Bubu Pharmacy. "Blessed" by the adepti with a body that cannot die, this petite zombie cannot do anything without first giving herself orders to do it.<br>
-                    Qiqi's memory is like a sieve. Out of necessity, she always carries around a notebook in which she writes anything important that she is sure to forget later.<br>
+                <div class="lore">An apprentice and herb gatherer at Bubu Pharmacy. "Blessed" by the adepti with a body
+                    that cannot die, this petite zombie cannot do anything without first giving herself orders to do it.<br>
+                    Qiqi's memory is like a sieve. Out of necessity, she always carries around a notebook in which she
+                    writes anything important that she is sure to forget later.<br>
                     But on her worst days, she even forgets to look at her notebook...
                 </div>
 
                 <div class="weaponsContent">
                     <div>
-                        <img alt="Skyward Blade" class="weapon rare5" src="../images/img-genshin/weapons/skyward_blade.png">
+                        <img alt="Skyward Blade" class="weapon rare5"
+                             src="../images/img-genshin/weapons/skyward_blade.png">
                         <div>
                             <span class="weaponsName">Skyward Blade</span>
                             <span class="weaponsText">CRIT Rate increased by <strong>4/5/6/7/8%</strong>. Gains Skypiercing Might upon using an Elemental Burst:
@@ -302,7 +306,8 @@ Increases Movement SPD by <strong>10%</strong>, increases ATK SPD by <strong>10%
                         </div>
                         <div>
                             <img alt="Philosophies of Prosperity"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_prosperity.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_prosperity.png">
                             <span class="materialsName">Philosophies of Prosperity (x114)</span>
                         </div>
                         <div>
@@ -475,7 +480,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Divine Suppression</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span class="constellationsDescription">Targets marked by the Fortune-Preserving Talisman have their ATK decreased by 20%.</span>
+                                <span class="constellationsDescription">Targets marked by the Fortune-Preserving Talisman have their ATK decreased by 20%.</span>
                             </div>
                         </div>
                     </div>
@@ -523,7 +528,11 @@ This effect can only occur once every 15 mins.
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/_ndVJlqBYLY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/_ndVJlqBYLY"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -540,7 +549,7 @@ This effect can only occur once every 15 mins.
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
