--- a/html/rosaria.html
+++ b/html/rosaria.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -182,13 +183,16 @@
         <div id="content">
             <div id="text">
                 <div class="lore">Rosaria, a sister in Mondstadt's Church of Favonius.<br>
-                    A sister of the church, though you wouldn't know it if it weren't for her attire. An unusual woman with sharp, piercing words and a cold manner.<br>
-                    Her movements are unpredictable. She often leaves without notifying anyone. She acts with some kind of purpose, but others don't seem to know exactly what she stands for...
+                    A sister of the church, though you wouldn't know it if it weren't for her attire. An unusual woman
+                    with sharp, piercing words and a cold manner.<br>
+                    Her movements are unpredictable. She often leaves without notifying anyone. She acts with some kind
+                    of purpose, but others don't seem to know exactly what she stands for...
                 </div>
 
                 <div class="weaponsContent">
                     <div>
-                        <img alt="Staff of Homa" class="weapon rare5" src="../images/img-genshin/weapons/staff_of_homa.png">
+                        <img alt="Staff of Homa" class="weapon rare5"
+                             src="../images/img-genshin/weapons/staff_of_homa.png">
                         <div>
                             <span class="weaponsName">Staff of Homa</span>
                             <span class="weaponsText">HP increased by <strong>20/25/30/35/40%</strong>. Additionally, provides an ATK Bonus based on <strong>0.8/1/1.2/1.4/1.6%</strong> of the wielder's Max HP. When the wielder's HP is less than <strong>50%</strong>, this ATK bonus is increased by an additional <strong>1/1.2/1.4/1.6/1.8%</strong> of Max HP.</span>
@@ -534,7 +538,11 @@ Does not take effect in Domains, Trounce Domains, or Spyral Abyss. Not stackable
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KJwOW1zS8UM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/KJwOW1zS8UM"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -551,7 +559,7 @@ Does not take effect in Domains, Trounce Domains, or Spyral Abyss. Not stackable
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
