--- a/html/sara.html
+++ b/html/sara.html
@@ -12,6 +12,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -180,8 +181,10 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Leader of the Tenryou Commission's forces. A charismatic woman who acts as swiftly as a storm wind and always honors her word.<br>
-                    She bears the title of "Devotee of the Divine" and has sworn her allegiance to the Raiden Shogun.<br>
+                <div class="lore">Leader of the Tenryou Commission's forces. A charismatic woman who acts as swiftly as
+                    a storm wind and always honors her word.<br>
+                    She bears the title of "Devotee of the Divine" and has sworn her allegiance to the Raiden
+                    Shogun.<br>
                     The eternity that the Shogun pursues is the cause that she is willing to fight for.
                 </div>
 
@@ -343,7 +346,8 @@
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kujou_sara/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kujou_sara/talent_1.png">
                             <span class="talentsName">Tengu Bowmanship</span>
                             <span>Normal Attack</span>
                             <div>
@@ -363,7 +367,8 @@ When in the Crowfeather Cover state, a fully-charged arrow will leave a Crowfeat
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kujou_sara/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kujou_sara/talent_2.png">
                             <span class="talentsName">Tengu Stormcall</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -379,7 +384,8 @@ Crowfeathers will trigger Tengu Juurai: Ambush after a short time, dealing Elect
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kujou_sara/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kujou_sara/talent_3.png">
                             <span class="talentsName">Subjugation: Koukou Sendou</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -395,7 +401,8 @@ The ATK Bonus provided by various kinds of Tengu Juurai will not stack, and thei
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kujou_sara/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kujou_sara/talent_4.png">
                             <span class="talentsName">Immovable Will</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -403,7 +410,8 @@ The ATK Bonus provided by various kinds of Tengu Juurai will not stack, and thei
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kujou_sara/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kujou_sara/talent_5.png">
                             <span class="talentsName">Decorum</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -411,7 +419,8 @@ The ATK Bonus provided by various kinds of Tengu Juurai will not stack, and thei
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/kujou_sara/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/kujou_sara/talent_6.png">
                             <span class="talentsName">Land Survey</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -521,7 +530,11 @@ Maximum upgrade level is 15.</span>
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RPAoXtU5Kgg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/RPAoXtU5Kgg"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -538,7 +551,7 @@ Maximum upgrade level is 15.</span>
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
