--- a/html/sayu.html
+++ b/html/sayu.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -182,7 +183,8 @@
         <div id="content">
             <div id="text">
                 <div class="lore">Sayu, Shuumatsuban's resident ninja, is obsessed with sleeping and growing taller.<br>
-                    She has mastered all kinds of ninjutsu to run away and hide in pursuit of opportunities to laze around and sleep.<br>
+                    She has mastered all kinds of ninjutsu to run away and hide in pursuit of opportunities to laze
+                    around and sleep.<br>
                     Such an extraordinary skillset may have very unexpected uses.
                 </div>
 
@@ -260,7 +262,8 @@
                             <span class="materialsName">Marionette Core (x46)</span>
                         </div>
                         <div>
-                            <img alt="Crystal Marrow" class="material rare1" src="../images/img-genshin/items/crystal_marrow.png">
+                            <img alt="Crystal Marrow" class="material rare1"
+                                 src="../images/img-genshin/items/crystal_marrow.png">
                             <span class="materialsName">Crystal Marrow (x168)</span>
                         </div>
                         <div>
@@ -520,7 +523,12 @@
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iGBRnnyQeDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/iGBRnnyQeDk"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -536,7 +544,7 @@
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
