--- a/html/shenhe.html
+++ b/html/shenhe.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,7 +182,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Even though she was born in the human world, she ended up being an adepti disciple. She grew up in the mountains far away from Liyue Harbor, her soul bound with red ropes, training both her body and mind. Despite having the elegant temperament of an adeptus, she seems to be shrouded in mystery.</div>
+                <div class="lore">Even though she was born in the human world, she ended up being an adepti disciple.
+                    She grew up in the mountains far away from Liyue Harbor, her soul bound with red ropes, training
+                    both her body and mind. Despite having the elegant temperament of an adeptus, she seems to be
+                    shrouded in mystery.
+                </div>
 
                 <div class="weaponsContent">
                     <div>
@@ -313,7 +318,8 @@
                         </div>
                         <div>
                             <img alt="Philosophies of Prosperity"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_prosperity.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_prosperity.png">
                             <span class="materialsName">Philosophies of Prosperity (x114)</span>
                         </div>
                         <div>
@@ -544,7 +550,12 @@ When characters trigger Icy Quill's effects using Normal and Charged Attack DMG,
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/piiSGbsxMRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/piiSGbsxMRQ"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -560,7 +571,7 @@ When characters trigger Icy Quill's effects using Normal and Charged Attack DMG,
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
