--- a/html/tartaglia.html
+++ b/html/tartaglia.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,8 +182,10 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Meet Tartaglia — the cunning Snezhnayan whose unpredictable personality keeps people guessing his every move.<br>
-                    Don't be under any illusion as to what he might be thinking or what his intentions are. Just remember this: Behind that innocent, childlike exterior lies a finely honed instrument of war.
+                <div class="lore">Meet Tartaglia — the cunning Snezhnayan whose unpredictable personality keeps people
+                    guessing his every move.<br>
+                    Don't be under any illusion as to what he might be thinking or what his intentions are. Just
+                    remember this: Behind that innocent, childlike exterior lies a finely honed instrument of war.
                 </div>
 
                 <div class="weaponsContent">
@@ -351,7 +354,8 @@
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/tartaglia/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/tartaglia/talent_1.png">
                             <span class="talentsName">Cutting Torrent</span>
                             <span>Normal Attack</span>
                             <div>
@@ -373,7 +377,8 @@
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/tartaglia/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/tartaglia/talent_2.png">
                             <span class="talentsName">Foul Legacy: Raging Tide</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -396,7 +401,8 @@
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/tartaglia/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/tartaglia/talent_3.png">
                             <span class="talentsName">Havoc: Obliteration</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -415,7 +421,8 @@
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/tartaglia/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/tartaglia/talent_4.png">
                             <span class="talentsName">Never Ending</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -423,7 +430,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/tartaglia/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/tartaglia/talent_5.png">
                             <span class="talentsName">Sword of Torrents</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -431,7 +439,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/tartaglia/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/tartaglia/talent_6.png">
                             <span class="talentsName">Master of Weaponry</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -543,7 +552,12 @@ This effect will only take place once Tartaglia returns to his Ranged Stance.</s
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3f2-EANyrNM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/3f2-EANyrNM"
+                        title="YouTube video player" width="560"></iframe>
+                </iframe>
             </div>
         </div>
     </div>
@@ -560,7 +574,7 @@ This effect will only take place once Tartaglia returns to his Ranged Stance.</s
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
