--- a/html/thoma.html
+++ b/html/thoma.html
@@ -12,6 +12,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -180,9 +181,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">The housekeeper of the Yashiro Commission's Kamisato Clan, and a well-known "fixer" in Inazuma.<br>
+                <div class="lore">The housekeeper of the Yashiro Commission's Kamisato Clan, and a well-known "fixer" in
+                    Inazuma.<br>
                     Friendly and approachable, Thoma fits in with the crowd easily wherever he is.<br>
-                    At first glance, he seems to be a very easygoing person, but he is in fact very responsible. He has an extraordinarily serious side, be it in his work or his interpersonal communications.
+                    At first glance, he seems to be a very easygoing person, but he is in fact very responsible. He has
+                    an extraordinarily serious side, be it in his work or his interpersonal communications.
                 </div>
 
                 <div class="weaponsContent">
@@ -276,7 +279,8 @@
                             <span class="materialsName">Smoldering Pearl (x46)</span>
                         </div>
                         <div>
-                            <img alt="Fluorescent Fungus" class="material rare1" src="../images/img-genshin/items/fluorescent_fungus.png">
+                            <img alt="Fluorescent Fungus" class="material rare1"
+                                 src="../images/img-genshin/items/fluorescent_fungus.png">
                             <span class="materialsName">Fluorescent Fungus (x168)</span>
                         </div>
                         <div>
@@ -540,7 +544,11 @@
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HPoeE5PRWTw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/HPoeE5PRWTw"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -557,7 +565,7 @@
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
