--- a/html/venti.html
+++ b/html/venti.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,9 +182,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">A bard that seems to have arrived on some unknown wind — sometimes sings songs as old as the hills, and other times sings poems fresh and new.<br>
+                <div class="lore">A bard that seems to have arrived on some unknown wind — sometimes sings songs as old
+                    as the hills, and other times sings poems fresh and new.<br>
                     Likes apples and lively places but is not a fan of cheese or anything sticky.<br>
-                    When using his Anemo power to control the wind, it often appears as feathers, as he's fond of that which appears light and breezy.
+                    When using his Anemo power to control the wind, it often appears as feathers, as he's fond of that
+                    which appears light and breezy.
                 </div>
 
                 <div class="weaponsContent">
@@ -519,7 +522,11 @@
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/TSsWsCdiiPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/TSsWsCdiiPI"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -536,7 +543,7 @@
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
