--- a/html/xiangling.html
+++ b/html/xiangling.html
@@ -12,6 +12,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -180,9 +181,12 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">The Head Chef at the Wanmin Restaurant and also a waitress there, Xiangling is extremely passionate about cooking and excels at her signature hot and spicy dishes.<br>
-                    Though still young, Xiangling is a true master of the culinary arts with all the skills of a kitchen veteran. She enjoys a good reputation among the hearty eaters at Chihu Rock.<br>
-                    There's absolutely no need to be nervous if she wants you to sample her latest creation. It will not disappoint. Promise.
+                <div class="lore">The Head Chef at the Wanmin Restaurant and also a waitress there, Xiangling is
+                    extremely passionate about cooking and excels at her signature hot and spicy dishes.<br>
+                    Though still young, Xiangling is a true master of the culinary arts with all the skills of a kitchen
+                    veteran. She enjoys a good reputation among the hearty eaters at Chihu Rock.<br>
+                    There's absolutely no need to be nervous if she wants you to sample her latest creation. It will not
+                    disappoint. Promise.
                 </div>
 
                 <div class="weaponsContent">
@@ -335,7 +339,8 @@
                     </div>
                     <div class="talent1">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/xiangling/talent_1.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/xiangling/talent_1.png">
                             <span class="talentsName">Dough-Fu</span>
                             <span>Normal Attack</span>
                             <div>
@@ -354,7 +359,8 @@
                     </div>
                     <div class="talent2">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/xiangling/talent_2.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/xiangling/talent_2.png">
                             <span class="talentsName">Guoba Attack</span>
                             <span>Elemental Skill</span>
                             <div>
@@ -368,7 +374,8 @@
                     </div>
                     <div class="talent3">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/xiangling/talent_3.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/xiangling/talent_3.png">
                             <span class="talentsName">Pyronado</span>
                             <span>Elemental Burst</span>
                             <div>
@@ -382,7 +389,8 @@
                     </div>
                     <div class="talentPass">
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/xiangling/talent_4.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/xiangling/talent_4.png">
                             <span class="talentsName">Crossfire</span>
                             <span>Unlocked at Ascension 1</span>
                             <div>
@@ -390,7 +398,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/xiangling/talent_5.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/xiangling/talent_5.png">
                             <span class="talentsName">Beware, It's Super Hot!</span>
                             <span>Unlocked at Ascension 4</span>
                             <div>
@@ -398,7 +407,8 @@
                             </div>
                         </div>
                         <div>
-                            <img alt="talent" class="talentimg" src="../images/img-genshin/skills/xiangling/talent_6.png">
+                            <img alt="talent" class="talentimg"
+                                 src="../images/img-genshin/skills/xiangling/talent_6.png">
                             <span class="talentsName">Chef de Cuisine</span>
                             <span>Unlocked Automatically</span>
                             <div>
@@ -515,7 +525,11 @@
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/TvqGRUWm8qE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/TvqGRUWm8qE"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -532,7 +546,7 @@
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
