--- a/html/mona.html
+++ b/html/mona.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,8 +182,12 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">A mysterious young astrologer who proclaims herself to be "Astrologist Mona Megistus," and who possesses abilities to match the title. Erudite, but prideful.<br>
-                    Though she is often strapped for cash and lives a life of thrift, she is resolved to never use astrology for profit... It is this very resolution that has caused her to constantly fret about money.</div>
+                <div class="lore">A mysterious young astrologer who proclaims herself to be "Astrologist Mona Megistus,"
+                    and who possesses abilities to match the title. Erudite, but prideful.<br>
+                    Though she is often strapped for cash and lives a life of thrift, she is resolved to never use
+                    astrology for profit... It is this very resolution that has caused her to constantly fret about
+                    money.
+                </div>
 
                 <div class="weaponsContent">
                     <div>
@@ -308,7 +313,8 @@ Interlude: Elemental Mastery is increased by <strong>240/300/360/420/480</strong
                         </div>
                         <div>
                             <img alt="Philosophies of Resistance"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_resistance.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_resistance.png">
                             <span class="materialsName">Philosophies of Resistance (x114)</span>
                         </div>
                         <div>
@@ -491,7 +497,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Prophecy of Oblivion</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span class="constellationsDescription">When a character attacks an enemy affected by the Omen status effect, their CRIT Rate is increased by 15%.</span>
+                                <span class="constellationsDescription">When a character attacks an enemy affected by the Omen status effect, their CRIT Rate is increased by 15%.</span>
                             </div>
                         </div>
                     </div>
@@ -537,7 +543,12 @@ A maximum DMG Bonus of 180% can be achieved in this manner. The effect lasts for
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QUioSVENXcI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/QUioSVENXcI"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -553,7 +564,7 @@ A maximum DMG Bonus of 180% can be achieved in this manner. The effect lasts for
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
