--- a/html/razor.html
+++ b/html/razor.html
@@ -12,6 +12,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -180,9 +181,11 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">Some say he is an orphan raised by wolves. Others say he is a wolf spirit in human form.<br>
+                <div class="lore">Some say he is an orphan raised by wolves. Others say he is a wolf spirit in human
+                    form.<br>
                     He is most at home in the wild, fighting with claw and thunder.<br>
-                    To this day the wolf boy can be found prowling the forest, where he and his wolf pack hunt to survive using nothing more than their animal instincts.
+                    To this day the wolf boy can be found prowling the forest, where he and his wolf pack hunt to
+                    survive using nothing more than their animal instincts.
                 </div>
 
                 <div class="weaponsContent">
@@ -301,7 +304,8 @@
                         </div>
                         <div>
                             <img alt="Philosophies of Resistance"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_resistance.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_resistance.png">
                             <span class="materialsName">Philosophies of Resistance (x114)</span>
                         </div>
                         <div>
@@ -448,7 +452,7 @@ Using Lightning Fang resets the CD of Claw and Thunder.</span>
                             <span class="constellationsName">Wolf's Instinct</span>
                             <span>Constellation 1</span>
                             <div>
-                                    <span class="constellationsDescription">Picking up an Elemental Orb or Particle increases Razor's DMG by 10% for 8s.</span>
+                                <span class="constellationsDescription">Picking up an Elemental Orb or Particle increases Razor's DMG by 10% for 8s.</span>
                             </div>
                         </div>
                     </div>
@@ -534,7 +538,11 @@ When Razor is not using Lightning Fang, a lightning strike on an enemy will gran
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FOZ0tMA-b1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/FOZ0tMA-b1s"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -551,7 +559,7 @@ When Razor is not using Lightning Fang, a lightning strike on an enemy will gran
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
