--- a/html/second_news.html
+++ b/html/second_news.html
@@ -12,6 +12,7 @@
     <link href="../style/news.css" rel="stylesheet" type="text/css"/>
     <link href="../style/characters.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/news.js"></script>
 
@@ -194,7 +195,7 @@ A thousand cups filled with moonlight, shine brightly in the dreams of spring an
         <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                     src="../images/icons/hoyolab.png"
                                                                     title="Hoyolab"></a>
-        <div class="underline_footer">
+        <div class="underlineFooter">
         </div>
     </div>
     <div class="bot">
