--- a/html/sucrose.html
+++ b/html/sucrose.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,9 +182,12 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">An alchemist with an insatiable curiosity towards the world and everything in it. Attached to the Knights of Favonius as an assistant to Albedo, her area of focus is "bio-alchemy."<br>
+                <div class="lore">An alchemist with an insatiable curiosity towards the world and everything in it.
+                    Attached to the Knights of Favonius as an assistant to Albedo, her area of focus is
+                    "bio-alchemy."<br>
                     She strives to enrich the world by transforming living things with the power of alchemy.<br>
-                    Granted, the products of her research sometimes prove to be more weird than wonderful — but on the whole, she has made monumental contributions to the field of bio-alchemy.
+                    Granted, the products of her research sometimes prove to be more weird than wonderful — but on the
+                    whole, she has made monumental contributions to the field of bio-alchemy.
                 </div>
 
                 <div class="weaponsContent">
@@ -260,7 +264,8 @@
                             <span class="materialsName">Hurricane Seed (x46)</span>
                         </div>
                         <div>
-                            <img alt="Windwheel Aster" class="material rare1" src="../images/img-genshin/items/windwheel_aster.png">
+                            <img alt="Windwheel Aster" class="material rare1"
+                                 src="../images/img-genshin/items/windwheel_aster.png">
                             <span class="materialsName">Windwheel Aster (x168)</span>
                         </div>
                         <div>
@@ -514,7 +519,11 @@
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/--mQ-QqFUXU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/--mQ-QqFUXU"
+                        title="YouTube video player" width="560"></iframe>
             </div>
         </div>
     </div>
@@ -531,7 +540,7 @@
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
