--- a/html/xiao.html
+++ b/html/xiao.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,7 +182,8 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">One of the mighty and illuminated adepti guarding Liyue, also heralded as the "Vigilant Yaksha."<br>
+                <div class="lore">One of the mighty and illuminated adepti guarding Liyue, also heralded as the
+                    "Vigilant Yaksha."<br>
                     Despite his youthful appearance, tales of his exploits have been documented for millennia.<br>
                     He is especially fond of Wangshu Inn's Almond Tofu.<br>
                     This is because it tastes just like the sweet dreams he used to devour.
@@ -322,7 +324,8 @@
                         </div>
                         <div>
                             <img alt="Philosophies of Prosperity"
-                                 class="material rare4" src="../images/img-genshin/items/philosophies_of_prosperity.png">
+                                 class="material rare4"
+                                 src="../images/img-genshin/items/philosophies_of_prosperity.png">
                             <span class="materialsName">Philosophies of Prosperity (x114)</span>
                         </div>
                         <div>
@@ -546,7 +549,11 @@
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/sjozpa9DsZU" class="thumbnails" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails" frameborder="0"
+                        height="315" src="https://www.youtube.com/embed/sjozpa9DsZU"
+                        title="YouTube video player"
+                        width="560"></iframe>
             </div>
         </div>
     </div>
@@ -563,7 +570,7 @@
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
