--- a/html/yunjin.html
+++ b/html/yunjin.html
@@ -13,6 +13,7 @@
     <link href="../style/charactersNavBar.css" rel="stylesheet" type="text/css"/>
     <link href="../style/content.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/main.js"></script>
@@ -181,7 +182,10 @@
 
         <div id="content">
             <div id="text">
-                <div class="lore">The current director of the Yun-Han Opera Troupe, a renowned Liyue opera singer who is skilled in both playwriting and singing. Her style is one-of-a-kind, exquisite and delicate, much like the person herself.</div>
+                <div class="lore">The current director of the Yun-Han Opera Troupe, a renowned Liyue opera singer who is
+                    skilled in both playwriting and singing. Her style is one-of-a-kind, exquisite and delicate, much
+                    like the person herself.
+                </div>
 
                 <div class="weaponsContent">
                     <div>
@@ -275,7 +279,8 @@
                             <span class="materialsName">Riftborn Regalia (x46)</span>
                         </div>
                         <div>
-                            <img alt="Glaze Lily" class="material rare1" src="../images/img-genshin/items/glaze_lily.png">
+                            <img alt="Glaze Lily" class="material rare1"
+                                 src="../images/img-genshin/items/glaze_lily.png">
                             <span class="materialsName">Glaze Lily (x168)</span>
                         </div>
                         <div>
@@ -458,7 +463,7 @@ Opening Flourish's CD is decreased by 18%.
                             <span class="constellationsName">Myriad Mise-En-Scene</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span class="constellationsDescription">After Cliffbreaker's Banner is unleashed, all nearby party members' Normal Attack DMG is increased by 15% for 12s.</span>
+                                <span class="constellationsDescription">After Cliffbreaker's Banner is unleashed, all nearby party members' Normal Attack DMG is increased by 15% for 12s.</span>
                             </div>
                         </div>
                     </div>
@@ -530,7 +535,12 @@ Characters under the effects of the Flying Cloud Flag Formation have their Norma
     <div class="section" id="section2">
         <div class="video">
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YxIa114Od84" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="thumbnails"></iframe>            </div>
+                <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen class="thumbnails"
+                        frameborder="0" height="315"
+                        src="https://www.youtube.com/embed/YxIa114Od84"
+                        title="YouTube video player" width="560"></iframe>
+            </div>
         </div>
     </div>
 
@@ -546,7 +556,7 @@ Characters under the effects of the Flying Cloud Flag Formation have their Norma
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
                                                                             src="../images/icons/hoyolab.png"
                                                                             title="Hoyolab"></a>
-                <div class="underline_footer">
+                <div class="underlineFooter">
                 </div>
             </div>
             <div class="bot">
